# biodivine-lib-sbml

./: .gitignore  Cargo.toml  LICENSE  README.md  VALIDATION.md  biodivine_lib_sbml.pyi  pyproject.toml  validated-rules.txt
.github/workflows/: build.yml
examples/: basic_example.rs  test-suite-syntactic.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
sbml-macros/: Cargo.toml  README.md
sbml-macros/src/: lib.rs
sbml-test-suite/: Cargo.toml  README.md
sbml-test-suite/src/: lib.rs
src/: dummy_extension.rs  lib.rs  lib_py.rs  model.rs  sbase.rs  test_suite.rs  validation.rs  xml.rs
src/constants/: document.rs  element.rs  mod.rs  namespaces.rs
src/constraint/: association.rs  fbc_reaction.rs  fbc_species.rs  flux_objective.rs  gene_product.rs  gene_product_association.rs  mod.rs  objective.rs
src/constraint/validation/: association.rs  fbc_reaction.rs  fbc_species.rs  flux_objective.rs  gene_product.rs  gene_product_association.rs  mod.rs  objective.rs
src/core/: compartment.rs  constraint.rs  event.rs  function_definition.rs  initial_assignment.rs  math.rs  mod.rs  model.rs  model_py.rs  parameter.rs  parameter_py.rs  reaction.rs  rule.rs  sbase.rs  sbase_py.rs  species.rs  unit.rs  unit_definition.rs
src/core/validation/: compartment.rs  constraint.rs  (+16 more)
src/layout/: bounding_box.rs  curve.rs  dimensions.rs  layout.rs  mod.rs  point.rs
src/qual/: mod.rs  model.rs  qual_input.rs  qual_output.rs  qualitative_species.rs  terms.rs  transition.rs
src/sbml/: mod.rs
src/xml/: experiments.rs  generic_child.rs  generic_property.rs  impl_property_type.rs  impl_sbml_child.rs  impl_sbml_property.rs  impl_xml_child.rs  impl_xml_property.rs  impl_xml_property_type.rs  mod.rs  xml_child.rs  xml_element.rs  xml_inheritance.rs  xml_list.rs  xml_property.rs  xml_property_type.rs  xml_wrapper.rs
test-inputs/: COVID19_immunotherapy_Mathematical_Model.xml  Mukandavire2020.xml  apoptosis_stable.sbml  cholesterol_metabolism_and_atherosclerosis.xml  model.sbml  untitled.xml
test-inputs/fbc_tests/: example_fbc.xml  property_type_test.xml
test-inputs/test-fbc/: example_fbc.xml  property_type_test.xml  special_values.xml  strict_model.xml  test_fbc_20705.xml  test_fbc_20707.xml  test_fbc_20708.xml  test_fbc_20709.xml  test_fbc_20710.xml  test_fbc_20711.xml  test_fbc_20712.xml  test_fbc_20713.xml  test_fbc_20908.xml  test_fbc_21103.xml
test-inputs/test-layout/: compartment_glyph_test.xml  empty_list.xml  layout_example.xml  reference_glyph_test.xml  test_10402.xml  test_20310.xml  test_20803.xml  test_21204.xml  test_21303.xml  test_21305.xml  test_21703.xml
test-inputs/test-qual/: basic_example.xml  test_qual_20308.xml  test_qual_20309.xml  test_qual_20310.xml  test_qual_20409.xml  test_qual_20409_b.xml  test_qual_20508.xml  test_qual_20509.xml  test_qual_20607.xml  test_qual_20608.xml  test_qual_20609.xml
tests/: test_core.py
(+33 files in other folders)
