[package]
name = "biodivine-lib-sbml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# When enabled, run the SBML syntactic test suite as part of unit tests.
# This is mainly used for the purpose of code coverage computation.
sbml_test_suite = []

[dependencies]
const_format = "0.2.31"
phf = { version = "0.11.2", features = ["macros"] }
strum = "0.26"
strum_macros = "0.26"
regex = "1.10.3"
xml-doc = { git = "https://github.com/daemontus/xml-doc" }
sbml-macros = { path = "sbml-macros" }

[dev-dependencies]
sbml-test-suite = { path = "sbml-test-suite" }