[package]
name = "biodivine-lib-sbml"
version = "0.1.0"
edition = "2021"

[lib]
name = "biodivine_lib_sbml"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# When enabled, run the SBML syntactic test suite as part of unit tests.
# This is mainly used for the purpose of code coverage computation.
sbml_test_suite = []

[dependencies]
pyo3 = { version = "0.24.0", features = ["abi3-py37", "extension-module", "py-clone"] }
const_format = "0.2.31"
phf = { version = "0.11.2", features = ["macros"] }
strum = "0.26"
strum_macros = "0.26"
regex = "1.10.3"
biodivine-xml-doc = "0.3.1"
sbml-macros = { path = "sbml-macros" }
embed-doc-image = "0.1.4"

[dev-dependencies]
sbml-test-suite = { path = "sbml-test-suite" }

[build-dependencies]
pyo3-build-config = "0.24.0"
