[build-system]
requires = ["maturin>=1.7.0,<1.8.0"]
build-backend = "maturin"

[project]
name = "biodivine_lib_sbml"
description = "Python bindings for the Biodivine SBML library."
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
# TODO
Repository = "https://github.com/sybila/biodivine-aeon-py/"
Documentation = "https://biodivine.fi.muni.cz/docs/aeon-py/latest/"